<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.example.snuscollectorapp.MainActivity.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/passwordText"
            style="@style/loginTextviewStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/passwordString"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/emailInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/emailText"
            style="@style/loginTextviewStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/emailString"
            android:textColor="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="@+id/emailInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/loginString"
            app:layout_constraintEnd_toStartOf="@+id/createLoginButton"
            app:layout_constraintStart_toStartOf="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <Button
            android:id="@+id/createLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/createLoginString"
            app:layout_constraintEnd_toEndOf="@+id/passwordInput"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toTopOf="@+id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>