<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="snusViewModel"
            type="android.example.snuscollectorapp.models.SnusViewModel" />
        <variable
            name="snusDataVariable"
            type="android.example.snuscollectorapp.models.Snus" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/snusDetailsnusNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snusDetailsnusNameString"
            app:layout_constraintBottom_toTopOf="@+id/snusDetailsnusNameInput"
            app:layout_constraintStart_toStartOf="@+id/snusDetailsnusNameInput" />

        <TextView
            android:id="@+id/snusDetailCompanyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TypeDetailString"
            app:layout_constraintBottom_toTopOf="@+id/snusDetailCompanyInput"
            app:layout_constraintStart_toStartOf="@+id/snusDetailCompanyInput" />

        <TextView
            android:id="@+id/snusDetailDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StrengthDetailString"
            app:layout_constraintBottom_toTopOf="@+id/snusDetailDescriptionInput"
            app:layout_constraintStart_toStartOf="@+id/snusDetailDescriptionInput" />

        <TextView
            android:id="@+id/snusDetailsnusSizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CostDetailString"
            app:layout_constraintBottom_toTopOf="@+id/snusDetailsnusSizeInput"
            app:layout_constraintStart_toStartOf="@+id/snusDetailsnusSizeInput" />

        <EditText
            android:id="@+id/snusDetailsnusNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={snusDataVariable.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/snusDetailCompanyInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:text="@={snusDataVariable.type}"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snusDetailDescriptionInput"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/snusDetailDescriptionInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:text="@={snusDataVariable.strength}"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snusDetailsnusNameInput"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/snusDetailsnusSizeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:text="@={snusDataVariable.cost}"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/snusDetailCompanyInput"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/snusDetailSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/snusDetailSaveButtonString"
            app:layout_constraintEnd_toStartOf="@+id/snusDetailCancelButton"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="@+id/snusDetailsnusSizeInput"
            android:onClick="@{() -> snusViewModel.onSnusSave(snusDataVariable.name, snusDataVariable.cost, snusDataVariable.type, snusDataVariable.strength)}"
            app:layout_constraintTop_toBottomOf="@+id/snusDetailsnusSizeInput" />

        <Button
            android:id="@+id/snusDetailCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snusDetailCancelButtonString"
            app:layout_constraintEnd_toEndOf="@+id/snusDetailsnusSizeInput"
            app:layout_constraintTop_toTopOf="@+id/snusDetailSaveButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>